--- a/home.html
+++ b/home.html
@@ -1,11 +1,13 @@
 <table>
     <tr>
         <td>Nama: Yopi Yuda Febrian</td>
+        <td>Tempat Tanggal Lahir:Bandung, 25 02 03</td>
     </tr>
     <tr>
         <td>IPK: 3.93</td>
     </tr>
     <tr>
         <td>NIM: 6701213088</td>
+        <td>Kelas: d3si4501</td>
     </tr>
 </table>
